# alita

./: .dockerignore  Cargo.toml  Dockerfile  README.md  pyproject.toml  requirements.txt
docker/: entrypoint.sh
src/: fetch.rs  main.py  main.rs  protocol.rs  request.rs  tab_manager.rs
src/alita/: api.py  browser_pool.py  config.py  cookies.py  models.py  selectors.py  service.py
